qa/apps/elasticsearch/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: elasticsearch-basic-auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts:
        - search.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: search.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: elasticsearch-workers
            servicePort: 9200
